Sat Aug 18 22:21:26 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-histogram.c: moved to top-level directory

Mon Jun 25 17:41:42 2001  Brian Gough  <bjg@network-theory.co.uk>

	* init2d.c (gsl_histogram2d_set_ranges_uniform): added range
 	initialization functions suggested by Achim Gaedke

	* init.c (gsl_histogram_set_ranges_uniform): added range
 	initialization functions suggested by Achim Gaedke

Tue Apr 17 22:13:05 2001  Brian Gough  <bjg@network-theory.co.uk>

	* get2d.c: include "find.c"

Mon Apr 16 20:13:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* get2d.c (gsl_histogram2d_get): removed unnecessary reference to
 	find2d

Mon Jan 22 13:55:13 2001  Brian Gough  <bjg@network-theory.co.uk>

	* find.c (find): optimize for the linear case, include own binary
 	search for speed

	* add.c (gsl_histogram_accumulate): fix check of array bound for
 	index

Sun May 28 12:23:46 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test2d.c (main): use binary mode "b" when reading and writing
 	binary files

	* test.c (main): use binary mode "b" when reading and writing
 	binary files

Wed Apr 26 15:09:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* oper2d.c (gsl_histogram2d_shift): added function for shifting
 	histogram by a constant offset

	* oper.c (gsl_histogram_shift): added function for shifting
 	histogram by a constant offset

Wed Apr 19 17:27:44 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added numerous extensions from Simone Piccardi

2000-04-01  Mark Galassi  <rosalia@lanl.gov>

	* *.c: changed 0 -> GSL_SUCCESS where appropriate; THANKS to Dave
	Morrison.

Fri Nov 19 15:31:51 1999  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-histogram.c (main): free memory before exit, eliminates
 	warning from checkergcc

	* test_gsl_histogram.sh: added a test for the gsl-histogram
 	program

Fri Oct  1 15:47:01 1999  Brian Gough  <bjg@network-theory.co.uk>

	* file.c file2d.c: converted to use new block i/o functions
