@@ -1,3 +1,7 @@
+Sun Aug 19 13:31:35 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test_gsl_histogram.sh: moved to top-level directory
+
 Sat Aug 18 22:21:26 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* gsl-histogram.c: moved to top-level directory
